# exp-a-spiel

./: .gitignore  CMakeLists.txt  README.md  main.ipynb  main.py  pyproject.toml  setup.py  test_coherence.py
csrc/: CMakeLists.txt  averager.cpp  averager.h  base_state.h  bindings.cpp  cfr.cpp  cfr.h  dh3.cpp  dh_state.h  log.h  pttt_state.h  state.h  test.py  traverser.cpp  traverser.h  types.h  utils.h  vec_env.h
csrc/dh3/: __init__.py  __init__.pyi  pydh3.pyi
