[build-system]
requires = ["scikit_build_core", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "eas"
version = "0.0.1"
description = "exp-a-spiel"
readme = "README.md"
authors = [{ name = "Gabriele Farina", email = "gfarina@mit.edu" }]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",

]
keywords = ["exploitability", "openspiel", "imperfect-information", "game"]

[tool.pixi.project]
channels = ["https://repo.prefix.dev/rando-forge", "conda-forge", "nodefaults"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
boost-cpp = ">=1.85"
cmake = ">=3.29"
gcc = "<=13"                  # https://github.com/pybind/pybind11/issues/5206
gxx = "<=13"                  # https://github.com/pybind/pybind11/issues/5206
ninja = "*"
numpy = "<2"
pip = "*"
pybind11 = "*"
python = ">3.10"
scikit-build-core = ">=0.3.3"
open-spiel = "*"
sysroot_linux-64 = { version = ">=2.28,<=2.31", channel = "conda-forge" }
wheel = "*"
python-build = "*"
setuptools = "*"
[tool.pixi.pypi-dependencies]
eas = { path = "." } # editable = true 

[tool.pixi.feature.dev.dependencies]
pytest = "*"
pybind11-stubgen = "*"

[tool.pixi.environments]
default = { features = ["dev"] }

[tool.scikit-build]
# build-dir = "./pypy_build"
build.targets = ["pyeas"]
build.verbose = true
# editable.rebuild = true
logging.level = "INFO"
wheel.expand-macos-universal-tags = true
wheel.license-files = ["LICENSE"]
wheel.packages = ["src/eas"]
